--- a/EVDealerSales.Presentation/Pages/Shared/_Layout.cshtml
+++ b/EVDealerSales.Presentation/Pages/Shared/_Layout.cshtml
@@ -108,6 +108,12 @@
                                             </a>
                                         </li>
                                         <li>
+                                            <a class="dropdown-item" asp-page="/Staff/ManageOrders">
+                                                <i class="bi bi-bag-check me-2"></i>
+                                                Manage Orders
+                                            </a>
+                                        </li>
+                                        <li>
                                             <a class="dropdown-item" asp-page="/Staff/Customers">
                                                 <i class="bi bi-people me-2"></i>
                                                 Manage Customer
